<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/triviaView"
        android:layout_width="113dp"
        android:layout_height="71dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/chewy"
        android:paddingBottom="5sp"
        android:text="@string/trivia"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counterView"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="120dp"
        android:text="@string/_0_to_100"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triviaView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="353dp"
        android:layout_height="175dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="33dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterView" >

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hi_there_you_will_se_the_next_thing_to_br_happen"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/prevButton"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="65dp"
        android:background="@android:color/holo_red_light"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trueButton"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <Button
        android:id="@+id/trueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="56dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/true_x"
        app:layout_constraintEnd_toStartOf="@+id/falseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/falseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="91dp"
        android:background="@android:color/holo_red_light"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/false_y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trueButton"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="51dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="119dp"
        android:background="@android:color/holo_red_light"
        android:contentDescription="@string/todo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prevButton"
        app:layout_constraintTop_toBottomOf="@+id/falseButton"
        app:srcCompat="@android:drawable/ic_media_next" />

</androidx.constraintlayout.widget.ConstraintLayout>